# spd-site-plan-dev

./: .coveragerc  .env.security.production  .gitignore  .mcp.json  AI_ARCHITECT_RULES.md  CLAUDE.md  PROJECT_STATE.json  RALPH_INTEGRATION.md  README.md  SECURITY.md  index.html  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.claude/agents/: environmental-checker.md  permit-tracker.md  site-analyst.md  site-analyzer.md  utility-coordinator.md
.claude/commands/: analyze-parcel.md  analyze.md  check-zoning.md  generate-report.md  permits.md  pipeline-status.md
.claude/rules/: environmental.md  permits.md  pipeline.md  zoning.md
.github/workflows/: construction_takeoff_workflow.yml  generate_spd_docs.yml  greptile-review.yml  material_list_workflow.yml  opportunity_discovery.yml  rough_diamond_pipeline.yml  skill_creator.yml  spd_pipeline.yml  spd_skill_integration.yml  zod_pipeline.yml
.ralphy/: config.yaml
agents/orchestrator/: README.md  construction_takeoff_agent.py  material_list_agent.py  spd_skill_creator_agent.py
api/: chat.js
data/: sample_scored_parcels.json
data/rezoning/: DATA_COLLECTION_SUMMARY.md  palm_bay_data_collection_summary.md  palm_bay_decisions.json  palm_bay_pz_meetings.json  palm_bay_records_request_template.txt  palm_bay_rezoning_dataset.json
docs/: CONSTRUCTION_TAKEOFF_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  OPPORTUNITY_DISCOVERY.md  TESTING_GUIDE.md  TestFit_vs_SPD_AI_Competitive_Analysis.docx  greptile-evaluation-2026-01-28.md  security-gates-workflow.yml
docs/api/: api_reference.md  openapi.yaml
docs/competitive-analysis/: ZONING_COMPETITIVE_INTELLIGENCE_SUMMARY.md  ZONING_COMPETITORS_COMPLETE_PRD_PRS.md
docs/enhancements/: SPD_Pipeline_Improvements.md
docs/examples/: CODE_EXAMPLES.md
docs/philosophy/: biddeed_principles.md
docs/workflows/: quality-gates.yml
enhancements/: Zoning_Analyst_Enhancements_from_TestFit.md
methodology/: spd_enhancements_methodology.b64  zoning_analyst_enhancements_methodology.b64
poc/: malabar_poc_results.json
projects/SPD-2025-001/: SPD-2025-001_Report.docx  SPD-2025-001_Report_v2.docx  stage10_feasibility.json  stage10_feasibility_v2.json  stage12_archive.json  stage1_discovery.json  stage2_survey.json  stage3_zoning.json  stage4_constraints.json  stage4_constraints_v2.json  stage5_parking.json  stage6_traffic.json  stage7_utilities.json  stage8_stormwater.json  stage9_layout.json
projects/SPD-2025-002/: Sandy_Pines_Cheat_Sheet.md  Sandy_Pines_EXEC_SUMMARY.docx  Sandy_Pines_Executive_Summary.docx  Sandy_Pines_PreApp_Orchestration.docx  Sandy_Pines_PreApp_Report_Dec16.docx  Sandy_Pines_TALKING_POINTS.docx  Sandy_Pines_Talking_Points.md  stage10_feasibility.json  stage1_discovery.json  stage2_survey.json  stage3_zoning.json  stage4_constraints.json  stage5_parking.json  stage6_traffic.json  stage7_utilities.json  stage8_stormwater.json  stage9_layout.json
public/: landing.html
scripts/: audit_privileges.sh
skills/: README.md
skills/spd_docx/: SKILL.md  orchestrator.py
skills/spd_docx/templates/: meeting_agenda_attorney.js  pre_app_analysis.js
src/: App.jsx  __init__.py  index.js
src/agents/: __init__.py  ml_scoring_agent.py  pipeline_orchestrator.py
src/calculators/: parking_unit_config.py
src/components/: ChatInterface.jsx  FormInterface.jsx  MapView.jsx  Results.jsx  constants.js  index.js
src/integrations/: __init__.py  api_integrations.py  api_mega_library.py  data_sources.py  supabase_client.py
src/mcp/: __init__.py  spd_zod_mcp.py
src/ml/: __init__.py  real_xgboost_model.py  xgboost_models.py  zod_xgboost_model.py
src/models/: scoring_model.py
src/monitoring/: performance_tracker.py
src/ralph_pattern/: ralph_orchestrator.py  spd_success_criteria.json  success_criteria_validator.py
src/scrapers/: bcpao_scraper.py  municode_scraper.js
src/security/: config_validator.py  credential_rotation.py  encryption_manager.py  enhanced_audit.py  hitl_dashboard.py  hitl_triggers.py  privilege_audit.py  real_time_alerts.py  rls_verification.py  secrets_manager.py  security_orchestrator.py  threat_detection.py
src/state/: __init__.py  opportunity_state.py  spd_state.py
src/storage/: supabase_client.js
src/types/: __init__.py  security_types.py
src/utils/: error_handler.py
src/workflows/: opportunity_discovery.py  spd_workflow.py
src/zod/: CLAUDE.md  __init__.py  requirements.txt
src/zod/agents/: run_zod.py  zod_graph.py
src/zod/integrations/: bcpao_client.py  constraint_client.py  gis_client.py  rezoning_history.py
src/zod/models/: state_models.py
src/zod/reports/: opportunity_report.py
supabase/migrations/: 001_create_ordinance_tables.sql
tests/components/: test_components.jsx
tests/e2e/: test_e2e.py  test_full_pipeline.py
tests/integration/: test_automated_pipeline_validation.py  test_complete_pipeline.py  test_full_security_pipeline.py  test_integration_expanded.py  test_pipeline.py  test_security_integration.py
tests/ml/: test_model_validation.py
tests/models/: test_scoring_model.py
tests/security/: test_anomaly_detector.py  test_encryption.py  test_hitl_triggers.py  test_threat_detection.py
tests/zod/: test_zod_graph.py
